log/build_2026-06-24_18-45-11/go2_state_bridge/stderr.log
  File "/home/lukat/COGAR_ws/install/go2_state_bridge/lib/python3.10/site-packages/go2_state_bridge/state_bridge_node.py", line 47
    )
    ^
SyntaxError: invalid syntax

